# Mr.-Happy

./: .env  .env.example  .gitignore  CODE_OF_CONDUCT.md  EnglishInteractions.py  LICENSE  PortugueseInteractions.py  README.md  diversão.py  economia.py  economy.py  fun.py  keep_alive.py  main.py  moderation.py  pyproject.toml  zen.py
.github/: FUNDING.yml
MrHappy/: economia.py  economy.py  fun.py  main.py
routes/: utils.py
templates/: elements.html  index.html
